--- a/GEO77_MAP.html
+++ b/GEO77_MAP.html
@@ -14,8 +14,8 @@ crossorigin=""></script>
 </head>
 <body>
 
-	<h1>This is a heading, whatever</h1>
-	<p>This might be a paragraph.</p>
+	<h1>Map of Tuebingen</h1>
+	<p>Geographical Institute and Botanical Garden.</p>
 
 	<div id="mapid" style="width: 600px; height: 400px; position: relative;"></div>
 	<script>
